Jsx components now build to js with gulp babel

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/kumek/diablo4#readme",
   "devDependencies": {
+    "babel-plugin-transform-react-jsx": "^6.8.0",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.0",
     "gulp-jshint": "^2.0.1",
