--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "gulp build",
-    "clean": "gulp clean"
+    "clean": "gulp clean",
+    "watch": "gulp watch"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
     "gulp-babel": "^6.1.2",
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.0",
+    "gulp-dest": "^0.2.3",
     "gulp-jshint": "^2.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.1",
@@ -33,8 +35,10 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.6",
+    "jquery": "^3.0.0",
     "jsx-transform": "^2.3.0",
     "react": "^15.1.0",
-    "react-dom": "^15.1.0"
+    "react-dom": "^15.1.0",
+    "requirejs": "^2.2.0"
   }
 }
