--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "jshint": "^2.9.2"
   },
   "dependencies": {
+    "backbone": "^1.3.3",
     "bootstrap": "^3.3.6",
     "jquery": "^3.0.0",
     "jsx-transform": "^2.3.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
-    "requirejs": "^2.2.0"
+    "requirejs": "^2.2.0",
+    "underscore": "^1.8.3"
   }
 }
